# back-office-ui

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/back_office_ui/: app.py  clients.py  config.py  data.py  health.py  health_server.py
src/back_office_ui/dashboards/: __init__.py  fx_hedging.py  ledger.py  liquidity.py  mpc_signing.py  notification.py  pricing_quote.py  reconciliation.py  settlement.py  treasury.py  wallet.py
src/back_office_ui/pages/: __init__.py  fx_hedging.py  ledger.py  liquidity.py  mpc_signing.py  reconciliation.py  settlement.py  treasury.py  wallet.py
tests/: test_api.py  test_config.py  test_dashboards_more.py  test_data.py  test_health.py  test_integration.py  test_pages.py
