[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "back-office-ui"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=back_office_ui --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/back_office_ui"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401", "F811"]

[tool.mypy]
python_version = "3.11"
packages = ["src/back_office_ui"]
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = false